# esse-eu-ja-li

./: .gitignore  Makefile  README.md  docker-compose.yaml
.github/workflows/: deploy.yml  rank.yml  react.yml  rust.yml
AT/: Makefile  requirements.txt
AT/features/: fixtures.py
AT/features/books/: books.feature  detail.feature  environment.py  mark.feature
AT/features/books/steps/: books.py  detail.py  mark.py
AT/features/login/: environment.py  login.feature
AT/features/login/steps/: login.py
nginx/: default.conf
src/backend/: Cargo.toml  Dockerfile
src/backend/src/: adapters.rs  entrypoint.rs  main.rs
src/backend/src/adapters/: book_repository.rs  generate_jwt.rs  mod.rs  user_repository.rs
src/backend/src/domain/: book.rs  mod.rs  token.rs  user.rs
src/backend/src/entrypoint/: actix.rs  auth.rs  books.rs  dtos.rs  errors.rs  mod.rs
src/backend/src/infra/: password_hash.rs  user_repository.rs
src/backend/src/services/: list_books.rs  login.rs  mod.rs
src/frontend/: package-lock.json  package.json
src/frontend/.husky/: pre-commit
src/frontend/public/: index.html
src/frontend/src/: App.test.tsx  App.tsx  index.tsx  theme.ts
src/frontend/src/components/: app-bar.test.tsx  app-bar.tsx  book-card.test.tsx  book-card.tsx  copyright.tsx  layout.tsx  rank.test.tsx  rank.tsx  require-auth.test.tsx  require-auth.tsx
src/frontend/src/domain/: book.test.ts  book.ts
src/rank/: .gitignore  Dockerfile  requirements.txt
src/rank/app/: adapters.py  auth.py  handlers.py  main.py  models.py  test_main.py
src/rank/test/: helpers.py
(+10 files in other folders)
